plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.security:spring-security-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test' // JUnit 5 포함됨
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter' // Mockito + JUnit 5 통합
	// AutoParams (JUnit 5 기반 자동 파라미터 생성)
	implementation("io.github.autoparams:autoparams:11.2.0")
	// JUnit 플랫폼 런처 (IDE 외부에서 테스트 실행 시 필요할 수 있음)
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	//링크 추출
	implementation 'org.jsoup:jsoup:1.17.2'

	//스웨거
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//kafka
	implementation 'org.springframework.kafka:spring-kafka'

	//elasticsearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.retry:spring-retry'

}

tasks.named('test') {
	useJUnitPlatform()
}
